--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "alterphp/easyadmin-extension-bundle": "^1.3",
+        "api-platform/api-pack": "^1.1",
         "cocur/slugify": "^3.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "*",
@@ -26,7 +27,8 @@
         "symfony/validator": "*",
         "symfony/web-link": "*",
         "symfony/yaml": "*",
-        "vich/uploader-bundle": "^1.8"
+        "vich/uploader-bundle": "^1.8",
+        "webonyx/graphql-php": "^0.12.6"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
