--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,21 +1,26 @@
 easy_admin:
+  site_name: "Laroseveloutée.com"
   design:
     brand_color: '#d82383'
     menu: 
       - { entity: 'GalleryItem', label: 'Galerie' }
       - { entity: 'Product', label: 'Produits', default: true }
       - { entity: 'ProductType', label: 'Types' }
+    form_theme: ['horizontal', '@VichUploader/Form/fields.html.twig']
 
   entities:
     Product:
       class: App\Entity\Product
       form:
         fields:
+          # App\Form\Type\GalleryType
           - { property: 'name', type: 'text', label: 'Nom' }
           - { property: 'description', type: 'textarea', label: 'Description' }
           - { property: 'type', label: 'Type' }
           - { property: 'enabled', label: 'Afficher en ligne ?', type: 'choice', type_options: {choices: {'Non': 0, 'Oui': 1}, placeholder: false, multiple: false, expanded: true} }
-          - { property: 'image', label: 'Image', type: 'gallery', base_path: '%app.path.gallery_images%'}
+          - { property: 'image', label: 'Image', type: 'App\Form\Type\GalleryType'}
+          # - { property: 'image', label: 'Image', type: 'text', base_path: '%app.path.gallery_images%'}
+          # - image
           - { property: 'price', format: '%.2f', type: 'money', label: 'Prix', type_options: { currency: 'CAD' } }
       list:
         title: "Liste de produits"
@@ -52,7 +57,7 @@ easy_admin:
       class: App\Entity\GalleryItem
       form:
         fields:
-          - { property: 'imageFile', type: 'vich_image', base_path: '%app.path.gallery_images%' }
+          - { property: 'imageFile', label: 'Selectionner une image', type: 'vich_image', type_options: { required: true} }
           - { property: 'show_online', label: 'Afficher dans la galerie ?', type: 'choice', type_options: { placeholder: false, multiple: false, expanded: true, choices: {'Oui': '1', 'Non': '0'}}}
       list:
         title: "Galerie"
@@ -62,7 +67,7 @@ easy_admin:
           - { property: 'show_online', label: 'Afficher dans la galerie ?' , type: 'toggle'}
           - { property: 'products', label: 'Nombre de produits associés' }
       actions:
-          - { name: 'new', label: 'Ajouter une image' }
+          - { name: 'newz', label: 'Ajouter une image' }
       new:
         title: 'Ajouter une image'
       edit:
