--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,5 +3,6 @@ vich_uploader:
 
     mappings:
       gallery_images:
-        uri_prefix: /gallery
-        upload_destination: '%kernel.project_dir%/public/gallery'
+        uri_prefix: '%app.path.gallery_images%'
+        upload_destination: '%kernel.root_dir%/../public/gallery'
+        # upload_destination: '%kernel.root_dir%/public/gallery'
